# hpp-motion-prior

./: CMakeLists.txt  README.md  package.xml
data-traj/: rrt-floor-irreducible.tau  rrt-wall-8-time-43-95.tau  spheretraj-sublinks.txt  spheretraj.txt
doc/: Doxyfile.extra.in
idl/hpp/corbaserver/motion-prior/: precomputation.idl
idl/hpp/motion-prior/: precomputation.idl
include/hpp/corbaserver/motion-prior/: fwd.hh  irreducible-configuration-shooter.hh  server.hh
launch/: .irreducible.launch.swp  floor_irreducible.launch  floor_obstacle.launch  irreducible.launch  wall_irreducible.launch
rviz/: config.rviz
scripts/: generateSphereData.py  hrp2.py  hrp2_irreducible.py  irreducible-sublink-projector.py  irreducible_configuration.py  irreducible_plotter.py  irreducible_projector.py  irreducible_util.py  load_samples_irr_manifold.py  planning-rrt-loop.py  planning_rrt_test.py  planning_waypoint_trivial.py  plotSphereData.py  projected_volume.py  sample_random_irreducible_manifold.py  static_projection.py  test-irreducibility.py  test_projected_volume.py  test_robot_custom_function.py  test_robot_movement.py  trajectory-replay-irreducible.py  trajectory-replay.py  tutorial2.py  visualizeChain.py
src/: CMakeLists.txt  capsule-parser.cc  capsule-parser.hh  constraint-manifold-operator.cc  constraint-manifold-operator.hh  hpp-precomputation-corba-server.cc  irreducible-configuration-shooter.hh  irreducible-projection.cc  irreducible-projection.hh  natural-constraints.cc  natural-constraints.hh  precomputation-utils.cc  precomputation-utils.hh  precomputation.impl.cc  precomputation.impl.hh  server.cc
src/hpp/corbaserver/motion_prior/: __init__.py  client.py
urdf/: floor.urdf  floor_obstacle.urdf  wall.urdf  wall_texture.urdf
